# cats-API

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.test.yml  docker-compose.yml  pyproject.toml
.github/workflows/: project_CI.yml
migrations/: env.py
migrations/versions/: 6b091ded5393_create_tables.py
src/: colors_counter.py  main.py
src/api/v_0_1/routers/: cats.py  helper.py
src/config_settings/: config.py
src/database/: crud.py  database_settings.py  models.py
src/database/crud/: cats.py  cats_crud.py  helper_crud.py
src/migrations/: env.py
src/schemas/: cats.py  cats_schemas.py
src/services/: cats.py  helper.py
tests/: conftest.py  test_delete_cat.py  test_get_cat.py  test_get_cats.py  test_patch_cat.py  test_post_cat.py
