[tool.poetry]
name = "wgnet-assignment"
version = "0.1.0"
description = ""
authors = ["Sergey Kim <<sergkim7@gmail.com>>"]
readme = "README.md"
packages = [{include = "wgnet_assignment"}]

[tool.poetry.dependencies]
python = "^3.10"
sqlalchemy = "^2.0.3"
sqlalchemy-utils = "^0.39.0"
asyncpg = "^0.27.0"
alembic = "^1.9.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
