[tool.poetry]
name = "wgnet-assignment"
version = "0.1.0"
description = ""
authors = ["Sergey Kim <<sergkim7@gmail.com>>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
sqlalchemy = "^2.0.3"
sqlalchemy-utils = "^0.39.0"
asyncpg = "^0.27.0"
alembic = "^1.9.3"
python-dotenv = "^0.21.1"
fastapi = "^0.91.0"
uvicorn = "^0.20.0"
httpx = "^0.23.3"
pytest-asyncio = "^0.20.3"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
mypy = "^1.0.0"
pre-commit = "^3.0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
